syntax="proto2";
package azino;

message TxOpStatus {
  enum Code {
    Ok = 0;
    WriteConflicts = 1;
    WriteTooLate = 2;
    WriteBlock = 3;
    ReadNotExist = 4;
    ReadBlock = 5;
    CleanNotExist = 6;
    CommitNotExist = 7;
  };
  optional Code error_code = 1 [default = Ok];
  optional string error_message = 2;
}

message TxStatus {
  enum Code {
   UnInitialize = 0;
   Started = 1;
   Preputting = 2;
   Committing = 3;
   Committed = 4;
   Aborting = 5;
   Aborted = 6;
   Abnormal = 7;
  };
  optional Code status_code = 1 [default = UnInitialize];
  optional string status_message = 2;
}

message TxIdentifier {
  optional uint64 start_ts = 1;
  optional uint64 commit_ts = 2;
  optional TxStatus status = 3;
}